--- a/index.html
+++ b/index.html
@@ -4,48 +4,25 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>AluraFlix</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            max-width: 900px;
-            margin: 2rem auto;
-            padding: 0 Ires;
-            line-height: 1.5;
-        }
-
-        header {
-            font-weight: bold;
-            font-size: 1.2rem;
-            margin-bottom: irem;
-        }
-
-        .tag {
-            color #555;
-            margin-bottom: 1rem;
-        }
-
-        .video iframe {
-            max-width: 100%;
-            height: auto;
-        }
-    </style>
+    <title>AluraFlix Catálogo</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
-    <header>ALURAFLIX</header>
-    <main>
-        <h1>ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME?</h1>
-        <p class="tag">#homem-aranha</p>
+    <section>
+        <div>
+            <h1>ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME?</h1>
+            <p>#homem-aranha</p>
+        </div>
 
-        <div class="video">
+        <div>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/gt fAE1Eg20"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy "strict-origin-when-cross-origin" allowfullscreen>
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
             </iframe>
         </div>
-    </main>
+        </main>
 </body>
 
 </html>
